--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular-oauth2-oidc": "^3.1.4",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
