--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "moment": "^2.22.0",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "^5.5.6",
+    "sockjs-client": "^1.1.4",
+    "stompjs": "^2.3.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -37,6 +39,8 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/sockjs-client": "^1.1.0",
+    "@types/stompjs": "^2.3.2",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
