--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
-#logging:
-#    level:
-#        org.springframework.data.document.mongodb: DEBUG
+logging:
+    level:
+        org.springframework.data: DEBUG
 #        org.springframework.security: DEBUG
-log4j:
-    category:
-        org.springframework.data.document.mongodb: DEBUG
+#log4j:
+#    category:
+#        org.springframework.data.document.mongodb: DEBUG
 security:
     oauth2:
         resource:
